CheckIn:Fix bugzilla bug Bug 161826 problem on extracting data in XML data source using predicates

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
@@ -11,12 +11,11 @@
 #  
 #*************************************************************************
 #
-# $Id: build.properties,v 1.1 2006/09/28 10:30:34 lzhu Exp $
+# $Id: build.properties,v 1.2 2006/09/30 01:17:57 lchan Exp $
 #
 bin.includes = about.html,\
                plugin.xml,\
                META-INF/,\
-               lib/,\
                .,\
                plugin.properties,\
                about_files/
