--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
@@ -73,12 +73,12 @@
                
        </dataSetUI>
    </extension>
-   <!--extension
+   <extension
          point="org.eclipse.ui.preferencePages">
          <page
             class="org.eclipse.datatools.enablement.oda.xml.ui.preference.DataSetPreferencePage"
-            category="org.eclipse.birt.report.designer.ui.preferences.DateSetPreferencePage"
+            category="org.eclipse.datatools.connectivity.oda.design.internal.ui.preferences.OpenDataAccessPage"
             name="%preference.datasetpreview"
             id="org.eclipse.datatools.enablement.oda.xml.ui.preference.DataSetPreferencePage"/>
-   </extension-->
+   </extension>
 </plugin>
