Update for adding to build

--- a/plugins/org.eclipse.datatools.connectivity.jdt/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.jdt/build.properties
@@ -2,14 +2,13 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                .options,\
-               META-INF/,\
-               connectivityjdt.jar
-jars.compile.order 	= connectivityjdt.jar
-output.connectivityjdt.jar = bin/
-source.connectivityjdt.jar = src/
+               META-INF/
+jars.compile.order = .
 src.dir			 = src/
-plugin.version =	1.0.0.20061018
+plugin.version =	1.0.0.200610241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+source.. = src/
+output.. = bin/
