BZ159304- altering CP export format to resolve issue with exported filter properties BZ159649- altering CP export format to include driver reference for creation on import Also validating export path in export dialog to avoid writing file that seemingly goes nowhere

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -23,6 +23,7 @@ ImportProfilesDialog.null.title=Import Connection Profiles
 ExportProfilesDialog.btnEncryption.text=Encrypt file content
 actions.export.noselection = Please select at least one connection profile!
 actions.export.nofile = Please specify file name!
+actions.export.notvalidfile = Please specify a valid file name and path!
 dialog.exception.title = Exception
 dialog.exception.message = Exception caught: {0}
 NewCPWizard.title = New Connection Profile
