BZ 151737 - fixing remaining "driver instance" text to be "driver definition"

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
@@ -29,4 +29,4 @@ JDBCConnectionUtils.ConnectionTimeoutMessage=Connection timed out.
 
 JDBCConnection.technologyName = JDBC
 JDBCConnection.error.DriverNotExist = Driver does not exist.
-JDBCConnection.error.EmptyJarList = Empty jar list in driver instance.
+JDBCConnection.error.EmptyJarList = Empty jar list in driver definition.
