--- a/plugins/org.eclipse.datatools.connectivity.jdt/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.jdt/plugin.properties
@@ -11,4 +11,4 @@
 Plugin.Name = Data Tools Platform Connectivity JDT Extension Plug-in
 Plugin.ProviderName = Eclipse.org
 
-driver.classpath.container.name = Connectivity Driver Instance
+driver.classpath.container.name = Connectivity Driver Definition
