--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -111,8 +111,8 @@ CPRenameChange.name = Rename {0} Connection Profile
 CPRenameProcessor.name = DTP Connectivity Rename Processor
 CPRenameChange.title.error = Failed to rename connection profile.
 
-PropertyDescriptor.error.title = Error processing property descriptor for driver instance
-PropertyDescriptor.error.msg = Error encountered while processing properties for the driver instance.
+PropertyDescriptor.error.title = Error processing property descriptor for driver definition
+PropertyDescriptor.error.msg = Error encountered while processing properties for the driver definition.
 PasswordTextPropertyDescriptor.property.label = Password
 DriverClassBrowsePropertyDescriptor.property.label = Driver Class
 DriverClassBrowsePropertyDescriptor.jardialog.title = Available Classes from Jar List
