--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -37,8 +37,8 @@ DriverConnectionBase.error.driverDefinitionNotSpecified=Driver definition not sp
 DriverConnectionBase.error.driverDefinitionNotFound=Driver definition could not be found.
 error.loadprofilesxml = Error loading connection profile data.
 error.saveprofilesxml = Error saving connection profile data.
-error.loaddriversxml = Error loading driver instance data.
-error.savedriversxml = Error saving driver instance data.
+error.loaddriversxml = Error loading driver definition data.
+error.savedriversxml = Error saving driver definition data.
 
 trace.error.propertiesPersistenceHook = Could not load propertiesPersistenceHook, using default (profile type={0}, extension={1})
 trace.error.propertiesPersistenceHookSaveError = Error invoking properties persistent hook; persisting all properties (profile={0}, extension={1})
