--- a/plugins/org.eclipse.datatools.connectivity/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.properties
@@ -13,3 +13,4 @@ Plugin.ProviderName = Eclipse.org
 
 extension-point.name.connectionProfile = Connection Profile Extension
 extension-point.name.driverExtension = driverExtension
+ConnectionProfileRepository.Category.Name = Connection Profile Repositories
