--- a/plugins/org.eclipse.datatools.connectivity/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.xml
@@ -5,4 +5,11 @@
    <extension-point id="connectionProfile" name="%extension-point.name.connectionProfile" schema="schema/connectionProfile.exsd"/>
    <extension-point id="driverExtension" name="%extension-point.name.driverExtension" schema="schema/driverExtension.exsd"/>
 
+   <extension
+         point="org.eclipse.datatools.connectivity.connectionProfile">
+      <category
+            name="%ConnectionProfileRepository.Category.Name"
+            id="org.eclipse.datatools.connectivity.connectionProfileRepositoryCategory">
+      </category>
+   </extension>
 </plugin>
