--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -254,6 +254,9 @@
                   name="slot1"
                   separator="true"/>
             <insertionPoint
+                  name="slotOffline"
+                  separator="true"/>
+            <insertionPoint
                   name="slot2"
                   separator="true"/>
             <insertionPoint
