--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -47,7 +47,7 @@
          </viewerContentBinding>
          <viewerActionBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
             <includes>
-               <actionExtension pattern="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.RefreshActionProvider"/>
+               <actionExtension pattern="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.*"/>
             </includes>
          </viewerActionBinding>
       </extension>  
@@ -64,6 +64,54 @@
                <instanceof value="org.eclipse.datatools.modelbase.sql.schema.SQLObject"/>
             </or>
          </enablement>
+      </actionProvider>
+   	  <actionProvider
+   			id = "org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.DataGroupProvider"
+   			class = "org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.providers.DataGroupProvider">
+   			<enablement>
+   				<or>
+  	               	<adapt type="org.eclipse.datatools.modelbase.sql.tables.Table"/>
+  	               	<adapt type="org.eclipse.datatools.modelbase.sql.tables.Column"/>
+   				</or>
+   			</enablement>
+   	  </actionProvider>
+      <actionProvider
+            class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.providers.SampleContentProvider"
+            id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.SampleContentProvider"
+            dependsOn="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.DataGroupProvider">
+            <enablement>
+			    <and>
+	            	<adapt type="org.eclipse.datatools.connectivity.sqm.core.rte.ICatalogObject"/>
+	            	<or>
+	  	        		<adapt type="org.eclipse.datatools.modelbase.sql.tables.Table"/>
+	  	            	<adapt type="org.eclipse.datatools.modelbase.sql.tables.Column"/>
+	            	</or>
+	            </and>
+         	</enablement>
+      </actionProvider>
+      <actionProvider
+            class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.providers.WorkOfflineProvider"
+            id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.WorkOfflineProvider">
+            <enablement>
+	            <and>
+  	        		<adapt type="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+				    <test
+						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
+	                    value="org.eclipse.datatools.connectivity.sqm.core.connection.ConnectionInfo"/>
+	            </and>
+         	</enablement>
+      </actionProvider>
+      <actionProvider
+            class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.providers.SaveOfflineProvider"
+            id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.SaveOfflineProvider">
+            <enablement>
+	            <and>
+  	        		<adapt type="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+				    <test
+						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
+	                    value="org.eclipse.datatools.connectivity.sqm.core.connection.ConnectionInfo"/>
+	            </and>
+         	</enablement>
       </actionProvider>
    </extension>
    <extension
