--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -75,6 +75,7 @@
    				</or>
    			</enablement>
    	  </actionProvider>
+   	  <!-- Move to SQL dev tools plugin
       <actionProvider
             class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.providers.SampleContentProvider"
             id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.SampleContentProvider"
@@ -89,6 +90,7 @@
 	            </and>
          	</enablement>
       </actionProvider>
+      -->
       <actionProvider
             class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.providers.WorkOfflineProvider"
             id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.WorkOfflineProvider">
