--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -65,8 +65,8 @@ NewConnectionProfileWizardPage.cp_desc = Description(optional):
 NewConnectionProfileWizardPage.choices = Please select:
 NewConnectionProfileWizardPage.summary_cp_name = Name
 NewConnectionProfileWizardPage.summary_cp_desc = Description
-NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect when the wizard is finished or when Enterprise Explorer opens.
-NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect when Enterprise Explorer opens.
+NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect when the wizard is finished or when Data Source Explorer opens.
+NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect when Data Source Explorer opens.
 NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
 ConnectionProfileDetailsPage.Button.TestConnection = &Test Connection
 ConnectionProfileDetailsPage.AskConfirmation = Confirm Dialog
