--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.xml
@@ -26,56 +26,16 @@
          <propertyVisibility name="XML_FILE" visibility="hide"/>
          </properties>
             <dataTypeMapping
-                  nativeDataType="BIT"
-                  nativeDataTypeCode="-7"
-                  odaScalarDataType="Integer"/>
-            <dataTypeMapping
-                  nativeDataType="TINYINT"
-                  nativeDataTypeCode="-6"
-                  odaScalarDataType="Integer"/>
-            <dataTypeMapping
-                  nativeDataType="SMALLINT"
-                  nativeDataTypeCode="5"
-                  odaScalarDataType="Integer"/>
-            <dataTypeMapping
-                  nativeDataType="INTEGER"
+                  nativeDataType="INT"
                   nativeDataTypeCode="4"
                   odaScalarDataType="Integer"/>
-            <dataTypeMapping
-                  nativeDataType="BIGINT"
-                  nativeDataTypeCode="-5"
-                  odaScalarDataType="Decimal"/>
-            <dataTypeMapping
-                  nativeDataType="FLOAT"
-                  nativeDataTypeCode="6"
-                  odaScalarDataType="Double"/>
-            <dataTypeMapping
-                  nativeDataType="REAL"
-                  nativeDataTypeCode="7"
-                  odaScalarDataType="Double"/>
             <dataTypeMapping
                   nativeDataType="DOUBLE"
                   nativeDataTypeCode="8"
                   odaScalarDataType="Double"/>
             <dataTypeMapping
-                  nativeDataType="NUMERIC"
-                  nativeDataTypeCode="2"
-                  odaScalarDataType="Decimal"/>
-            <dataTypeMapping
-                  nativeDataType="DECIMAL"
-                  nativeDataTypeCode="3"
-                  odaScalarDataType="Decimal"/>
-            <dataTypeMapping
-                  nativeDataType="CHAR"
-                  nativeDataTypeCode="1"
-                  odaScalarDataType="String"/>
-            <dataTypeMapping
-                  nativeDataType="VARCHAR"
+                  nativeDataType="STRING"
                   nativeDataTypeCode="12"
-                  odaScalarDataType="String"/>
-            <dataTypeMapping
-                  nativeDataType="LONGVARCHAR"
-                  nativeDataTypeCode="-1"
                   odaScalarDataType="String"/>
             <dataTypeMapping
                   nativeDataType="DATE"
@@ -90,21 +50,17 @@
                   nativeDataTypeCode="93"
                   odaScalarDataType="Timestamp"/>
             <dataTypeMapping
-                  nativeDataType="BINARY"
-                  nativeDataTypeCode="-2"
+                  nativeDataType="BLOB"
+                  nativeDataTypeCode="2004"
                   odaScalarDataType="String"/>
             <dataTypeMapping
-                  nativeDataType="VARBINARY"
-                  nativeDataTypeCode="-3"
+                  nativeDataType="CLOB"
+                  nativeDataTypeCode="2005"
                   odaScalarDataType="String"/>
             <dataTypeMapping
-                  nativeDataType="LONGVARBINARY"
-                  nativeDataTypeCode="-4"
-                  odaScalarDataType="String"/>
-            <dataTypeMapping
-                  nativeDataType="BOOLEAN"
-                  nativeDataTypeCode="16"
-                  odaScalarDataType="Integer"/>
+                  nativeDataType="BIGDECIMAL"
+                  nativeDataTypeCode="2"
+                  odaScalarDataType="Decimal"/>
       </dataSet>
 	  <dataSource
             odaVersion="3.0.0"
