--- a/plugins/org.eclipse.datatools.connectivity/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity/build.properties
@@ -4,12 +4,12 @@ bin.includes = plugin.xml,\
                schema/,\
                .options,\
                META-INF/,\
-               connectivity.jar
-jars.compile.order 	= connectivity.jar
-output.connectivity.jar = bin/
-source.connectivity.jar = src/
+               .
+jars.compile.order = .
+output.. = bin/
+source.. = src/
 src.dir			 = src/
-plugin.version =	1.0.0.200612191
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
