[172561] make plugin JARed

--- a/plugins/org.eclipse.datatools.connectivity.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/build.properties
@@ -3,13 +3,13 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                META-INF/,\
-               connectivityui.jar
-jars.compile.order = connectivityui.jar
-source.connectivityui.jar = src/
-output.connectivityui.jar = bin/
+               .
+jars.compile.order = .
+source.. = src/
+output.. = bin/
 
 src.dir =		src/
-plugin.version =	1.0.0.200701101
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
