[172558] make plugin JARed

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
@@ -1,15 +1,15 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               dse.jar,\
+               .,\
                icons/,\
                plugin.properties,\
                about.html
-jars.compile.order = dse.jar
-source.dse.jar = src/
-output.dse.jar = bin/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
 
 src.dir =		src/
-plugin.version =	1.0.0.200612071
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
