[172557] make plugin JARed

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.properties
@@ -12,15 +12,16 @@ bin.includes = plugin.xml,\
                schema/,\
                icons/,\
                plugin.properties,\
-               rdb.server.ui.jar,\
+               .,\
                about.html,\
                META-INF/
-source.rdb.server.ui.jar = src/
-jars.compile.order = rdb.server.ui.jar
+source.. = src/
+output.. = bin/
+jars.compile.order = .
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	1.0.0.200701151
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
