[172555] make plugin JARed

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.properties
@@ -9,18 +9,18 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bin.includes = plugin.xml,\
-               rdb.core.ui.jar,\
+               .,\
                schema/,\
                plugin.properties,\
                icons/,\
                .options,\
                about.html,\
                META-INF/
-source.rdb.core.ui.jar = src/
-
+source.. = src/
+output.. = bin/
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	1.0.0.200701161
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
