--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.properties
@@ -1,15 +1,15 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               genericdbui.jar,\
+               .,\
                about.html,\
                icons/,\
                plugin.properties
-jars.compile.order = genericdbui.jar
-source.genericdbui.jar = src/
-output.genericdbui.jar = bin/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
 src.dir		     = src/
 jars.extra.classpath =
-plugin.version =	1.0.0.200609291
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
