--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
@@ -1,15 +1,15 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               genericdb.jar,\
+               .,\
                icons/,\
                about.html,\
                plugin.properties
-jars.compile.order = genericdb.jar
-source.genericdb.jar = src/
-output.genericdb.jar = bin/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
 src.dir		     = src/
 jars.extra.classpath =
-plugin.version =	1.0.0.20061018
+plugin.version =	1.0.0.200702011
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
