--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
@@ -3,7 +3,7 @@
 <!--
 /**
  *************************************************************************
- * Copyright (c) 2005, 2006 Actuate Corporation.
+ * Copyright (c) 2005, 2007 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -14,10 +14,17 @@
  *  
  *************************************************************************
  *
- * $Id: $
+ * $Id: plugin.xml,v 1.6 2006/03/10 00:43:13 lchan Exp $
  */
 -->
 
 <plugin>
+   <extension
+         point="org.eclipse.datatools.connectivity.oda.consumer.propertyProvider">
+      <dataSourcePropertyService
+            consumerApplicationId="org.eclipse.datatools.connectivity.oda.profile.connectionPropertyService"
+            providerClass="org.eclipse.datatools.connectivity.oda.profile.provider.ProfilePropertyProviderImpl">
+      </dataSourcePropertyService>
+   </extension>
    
 </plugin>
