make sure class files are jar'ed

--- a/plugins/org.eclipse.datatools.connectivity.jdt/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.jdt/build.properties
@@ -2,10 +2,11 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                .options,\
-               META-INF/
+               META-INF/,\
+               .
 jars.compile.order = .
 src.dir			 = src/
-plugin.version =	1.0.0.20061108
+plugin.version =	1.0.0.200702071
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
