update build.properties for pde build

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -21,3 +21,7 @@ bin.includes = about.html,\
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
+
+# required for PDE build
+javacSource = 1.4
+javacTarget = 1.4
