update build.properties for pde build

--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -11,7 +11,7 @@
 #  
 #*************************************************************************
 #
-# $Id: build.properties,v 1.6 2006/04/07 07:22:53 lchan Exp $
+# $Id: build.properties,v 1.7 2006/04/14 07:16:49 lchan Exp $
 #
 bin.includes = plugin.xml,\
                .,\
@@ -34,3 +34,7 @@ javadoc.dir =            doc/api/
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
+
+# required for PDE build
+javacSource = 1.4
+javacTarget = 1.4
