--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -27,6 +27,11 @@ jar.includes =           **/*.txt,\
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
+
+# required for PDE build
+javacSource = 1.4
+javacTarget = 1.4
+
 build.result.dir =	 	 ./
 temp.dir =		         ./tempdir/
 plugin.destination =     ./
