--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
@@ -24,3 +24,5 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+javacSource = 1.4
+javacTarget = 1.4
