--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
@@ -32,3 +32,7 @@ temp.dir =		         ./tempdir/
 plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
+
+# required for PDE build
+javacSource = 1.4
+javacTarget = 1.4
