--- a/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
@@ -11,7 +11,7 @@
 #  
 #*************************************************************************
 #
-# $Id: build.properties,v 1.2 2006/09/30 01:17:57 lchan Exp $
+# $Id: build.properties,v 1.3 2006/10/24 10:42:14 lzhu Exp $
 #
 bin.includes = about.html,\
                plugin.xml,\
@@ -22,3 +22,7 @@ bin.includes = about.html,\
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
+
+# required for PDE build
+javacSource = 1.4
+javacTarget = 1.4
