dpchou 20070216 single jarring modelbase

--- a/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
@@ -8,14 +8,14 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-bin.includes = plugin.xml,\
-               plugin.properties,\
-               databasedefinition.jar,\
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
                about.html,\
-               META-INF/
-source.databasedefinition.jar = src/
+               plugin.properties
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	1.0.0.200609291
 javadoc.dir =		doc/api/
