--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -1,22 +1,20 @@
-<!--
-/**
- * <copyright>
- * </copyright>
- *
- * $Id: build.properties,v 1.7 2006/08/31 20:14:00 jgraham Exp $
- */
--->
-bin.includes = plugin.xml,\
-               sqlmodel.edit.jar,\
-               plugin.properties,\
-               icons/,\
+##################################################################
+#
+# <copyright>
+# </copyright>
+#
+# $Id: build.properties,v 1.8 2006/09/29 19:08:02 jgraham Exp $
+#
+##################################################################
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
                about.html,\
-               META-INF/
-jars.compile.order = sqlmodel.edit.jar
-source.sqlmodel.edit.jar = src/
-output.sqlmodel.edit.jar = bin/
+               icons/,\
+               plugin.properties
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	1.0.0.200609291
 javadoc.dir =		doc/api/
