--- a/plugins/org.eclipse.datatools.modelbase.sql/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/build.properties
@@ -8,18 +8,18 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-source.sqlmodel.jar = src/
-output.sqlmodel.jar = bin/
-bin.includes = plugin.xml,\
-               sqlmodel.jar,\
-               plugin.properties,\
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
                about.html,\
-               META-INF/
+               plugin.properties
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	1.0.0.200609291
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+
