Add values to build.properties for DTP automated build process

--- a/plugins/org.eclipse.datatools.sqltools.data.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.data.core/build.properties
@@ -5,3 +5,9 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                META-INF/
+src.dir = src/
+plugin.version =	1.0.0.200612181
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
