--- a/plugins/org.eclipse.datatools.sqltools.data.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.data.ui/build.properties
@@ -6,3 +6,9 @@ bin.includes = plugin.xml,\
                icons/,\
                about.html,\
                META-INF/
+src.dir = src/
+plugin.version =	1.0.0.200702201
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
