--- a/plugins/org.eclipse.datatools.sqltools.tabledataeditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.tabledataeditor/build.properties
@@ -5,6 +5,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                META-INF/
+src.dir = src/
+plugin.version =	1.0.0.200612191
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
