BZ 165333 - enhancement - adding connected status to profile description in status bar when selected

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -119,3 +119,7 @@ DriverClassBrowsePropertyDescriptor.jardialog.title = Available Classes from Jar
 DriverClassBrowsePropertyDescriptor.jardialog.msg = Select one of the available classes.
 DriverClassBrowsePropertyDescriptor.noclasses.title = No Available Driver Classes
 DriverClassBrowsePropertyDescriptor.noclasses.msg = There are no driver classes available for the current jar list.
+
+StatusBar.Connected = Connected
+StatusBar.Disconnected = Disconnected
+StatusBar.ConnectedMessage = {0} ({1})
