--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004, 2006 Actuate Corporation.
+# Copyright (c) 2004, 2007 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -7,12 +7,21 @@
 #
 # Contributors:
 #  Actuate Corporation  - initial API and implementation
+#
+###############################################################################
+# Plug-in Profile Configuration
+#
+oda.data.source.id=org.eclipse.datatools.connectivity.oda.flatfile
+oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
+#
 ###############################################################################
 # NLS String
 ###############################################################################
 plugin.name=DTP ODA Flat File Run-time Driver
 datasource.name=Flat File Data Source
 dataset.name=Flat File Data Set
+oda.data.source.category.name=CSV Flat Files
+connection.profile.name=ODA Flat File Data Source Connection Profile
 
 datasource.property.home=Home &Folder
 datasource.property.csvdelimitertype=CSV &Type
@@ -28,3 +37,7 @@ property.value.comma=COMMA
 property.value.semicolon=SEMICOLON
 property.value.pipe=PIPE
 property.value.tab=TAB
+#
+#  Below NLS messages apply to all ODA data sources; should be re-factored
+#
+oda.connection.factory.name=ODA Connection Factory
